# smallflex-vpp-codes

./: .envrc  .gitignore  Makefile  Makefile.common.mak  README.md  base_line.ipynb  baseline.html  environment.yml  first_model_baseline.html  first_stage_baseline.html  first_stage_income_full_deterministic_da_energy.csv  genindex.html  index.html  makefile  note.txt  objects.inv  pyomo_test.py  pyproject.toml  requirements.txt  search.html  searchindex.js  second_stage_baseline.html  settings.toml  test.ipynb
.doctrees/: baseline.doctree  environment.pickle  first_model_baseline.doctree  first_stage_baseline.doctree  index.doctree  second_stage_baseline.doctree
_sources/: baseline.rst.txt  index.rst.txt
_static/: custom.css
data/: file_names.json  filtred_eq.json  input_file_names.json  output_file_names.json
docs/: baseline.rst  conf.py  first_model_baseline.rst  first_stage_baseline.rst  index.rst  momo_guide.md  second_stage_baseline.rst
examples/: 01_download_from_switch.py  02_vpp_design_scheme_optimization.py  VPP_desing_scheme.py  __init__.py  ancillary_market.py  baseline_optimization.py  battery_size_design.py  download_from_switch.py  first_stage_stochiastic_test.py  frc_sensivity_analysis.py  full_deterministic.py  full_non_linear_deterministic_test.py  imbalance_penalty.py  init.py  market_price_quantile_analysis.py  market_price_window_size_analysis.py  plot_first_stage_results.py  plot_second_stage_results.py  second_stage_deterministic.py  stochiastic_test.py  water_level_quantile_analysis.py
external-dist/: smallflex_data_schema-0.1.0-py3-none-any.whl  smallflex_data_schema-0.1.1-py3-none-any.whl  smallflex_data_schema-0.1.2-py3-none-any.whl  smallflex_data_schema-0.1.3-py3-none-any.whl  smallflex_data_schema-0.1.4-py3-none-any.whl  smallflex_data_schema-0.1.5-py3-none-any.whl  smallflex_data_schema-0.1.6-py3-none-any.whl  utility_functions-0.1.0-py3-none-any.whl  utility_functions-0.1.1-py3-none-any.whl
notebook/: base_line.ipynb  discharge_flow_synthesier.ipynb  measurement_forecast_difference.ipynb  measurment_differences.ipynb  plot_input.ipynb  result_display.ipynb  test.ipynb  test_cvxpy.ipynb  turbined_water_problem.ipynb
results_display/: __init__.py  first_stage_resluts_display.py  plot_battery_arbitrage.py  plot_first_stage_results.py  plot_imblance.py  plot_market_price_quantile_analysis.py  plot_reservoir_level_measurement.py  plot_second_stage_results.py  plot_water_level_quantile_analysis.py  plot_window_size_analysis copy.py  plot_window_size_analysis.py
scripts/: 01_load_data.py  02_generate_scenarios.py  03_generate_case_studies.py  baseline_optimization.py  enable-direnv.sh  (+18 more)
(+276 files in other folders)
