[tool.poetry]
name = "smallflex-vpp-codes"
version = "0.1.0"
description = ""
authors = ["mohammad.rayati <mohammad.rayiati@gmail.com>"]
readme = "README.md"
package-mode = false 

[tool.poetry.dependencies]
python = "^3.12,<3.14"
utility-functions = {path = "external-dist/utility_functions-0.1.0-py3-none-any.whl", optional = true}
polars = "^1.32.3"
sqlalchemy = "^2.0.43"
scipy = "^1.16.1"
matplotlib = "^3.10.5"
pandas = "^2.3.2"
pyomo = "^6.9.3"

dependencies = [
    "utility-functions @ git+ssh://git@github.com/heig-vd-ie/utility-functions.git",
    "pyomo (>=6.9.2,<7.0.0)",
    "plotly (>=6.1.1,<7.0.0)",
    "gurobipy (>=12.0.2,<13.0.0)",
    "patito (>=0.8.3,<0.9.0)",
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.extras]
internal = ["utility-functions"]